--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "homepage": "https://github.com/herman-nott/usof-backend#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "knex": "^3.1.0",
+    "mysql2": "^3.14.4",
     "nodemon": "^3.1.10"
   }
 }
