--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.18.2",
     "knex": "^3.1.0",
     "mysql2": "^3.14.4",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10"
   }
 }
