--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/herman-nott/usof-backend#readme",
   "description": "",
   "dependencies": {
+    "@adminjs/express": "^6.1.1",
     "@adminjs/sql": "^2.2.6",
+    "adminjs": "^7.8.17",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.2",
@@ -28,5 +30,6 @@
     "mysql2": "^3.14.4",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10"
-  }
+  },
+  "type": "module"
 }
